fix: tranform footer to last kudos and horizontal scroll

--- a/src/components/Organisms/BottomBar/BottomBar.module.css
+++ b/src/components/Organisms/BottomBar/BottomBar.module.css
@@ -7,53 +7,31 @@
   height: 37.5px;
   position: relative;
   overflow: hidden;
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .sliders {
-  animation: carouselAnimation 60s infinite;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  width: fit-content;
+  animation: scrollHorizontal 120s linear infinite;
 }
 
-@keyframes carouselAnimation {
+.quote {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  margin-right: 20rem;
+}
+
+.icon {
+  margin-right: 0.5rem;
+}
+
+@keyframes scrollHorizontal {
   0% {
-    top: 0;
-  }
-  8.33% {
-    top: -100%;
-  }
-  16.66% {
-    top: -200%;
-  }
-  25% {
-    top: -300%;
-  }
-  33.33% {
-    top: -400%;
-  }
-  41.66% {
-    top: -500%;
-  }
-  50% {
-    top: -600%;
-  }
-  58.33% {
-    top: -700%;
-  }
-  66.66% {
-    top: -800%;
-  }
-  75% {
-    top: -900%;
-  }
-  83.33% {
-    top: -1000%;
-  }
-  91.66% {
-    top: -1100%;
+    transform: translateX(0);
   }
   100% {
-    top: 0%;
+    transform: translateX(-50%);
   }
 }
